--- a/src/components/CodeBlockPage/CodeBlockPage.css
+++ b/src/components/CodeBlockPage/CodeBlockPage.css
@@ -1,4 +1,5 @@
 .codeblock-page {
+    max-height: 90vh;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -7,14 +8,9 @@
 
 .codeblock-page h2 {
     font-size: 2rem;
-    margin-bottom: 1rem;
+    margin: 1rem auto;
 }
 
-.codeblock-page p {
-    font-size: 1rem;
-    margin-bottom: 2rem;
-    text-align: center;
-}
 
 .editor-wrapper {
     max-width: 100%;
@@ -26,18 +22,13 @@
 }
 
 
-.button-group {
-    margin-bottom: 1rem;
-}
 
 .code-submit-btn {
-display: inline-block;
     outline: none;
     cursor: pointer;
     font-weight: 500;
     border: 1px solid transparent;
     border-radius: 2px;
-    height: 36px;
     line-height: 34px;
     font-size: 14px;
     color: #ffffff;
@@ -52,3 +43,60 @@ display: inline-block;
             background-color: #006570;
 }
 
+
+.centerDiv {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-size: 40px;
+    color: yellowgreen;
+}
+
+
+.code-block-content {
+    display: flex;
+    gap: 2rem;
+}
+
+
+
+.challenge-desc {
+    line-height: 3rem;
+    font-size: 1.4rem;
+    text-align: center;
+}
+
+.left-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+
+@media screen and (max-width:550px) {
+    .code-block-content {
+        flex-direction: column;
+    }
+
+    .challenge-desc {
+        font-size: 1.3rem;
+    }
+
+    .code-submit-btn {
+        position: fixed;
+        bottom: 10px;
+        z-index: 999;
+        right: 1rem;
+        line-height: 25px;
+        padding: 1rem;
+        font-size: 1rem;
+        border-radius: 15px;
+    }
+
+    .editor-wrapper {
+        margin-block-end: 30px;
+    }
+}
