--- a/src/components/UI/Header.css
+++ b/src/components/UI/Header.css
@@ -10,7 +10,14 @@
 }
 
 .logo {
-    font-size: 1.5rem;
+    font-size: 1.4rem;
+        font-family: system-ui;
+        font-weight: 100;
 }
 
+.logo span {
+    font-size: 2.5rem;
+    color: darkkhaki;
+    font-weight: 400;
+}
 
